--- a/day1/mytest.html
+++ b/day1/mytest.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <b> - Bold text
-        <strong> - Important text
-        <i> - Italic text
-        <em> - Emphasized text
-        <mark> - Marked text
-        <small> - Smaller text
-        <del> - Deleted text
-        <ins> - Inserted text
-        <sub> - Subscript text
-        <sup> - Superscript text
-        
+        <p>텍스트 진하게 : <b> b - Bold text</b></p>
+        <p>실제 웹문서에서 중요한 강조를 할 때 사용함. 스크린 리더의 억양이 달라짐 : <strong> strong - Important text</strong></p>
+        <p>단순히 이탤릭 체로 표시 : <i> i - Italic text </i></p>
+        <p>특정 단어에 강세를 두고 발음. : <em> em - Emphasized text </em></p>
+        <p>텍스트 하이라이트 : <mark> mark - Marked text </mark></p>
+        <p>텍스트 작게 : <small>small - Smaller text</small></p>
+        <p>텍스트에 취소선 긋기 : <del> del - Deleted text </del></p>
+        <p>텍스트 밑줄 : <ins>ins - Inserted text</ins></p>
+        <p>텍스트 윗 첨자 : <sub>sub - Subscript text</sub></p>
+        <p>텍스트 아래 첨자 : <sup>sup - Superscript text</sup></p>
     <title>Document</title>
 </head>
 <body>
