--- a/mytest/css_flexbox.html
+++ b/mytest/css_flexbox.html
@@ -59,5 +59,24 @@
         <div>2</div>
         <div>3</div>  
       </div>
+<dl>
+    <dt>display: flex;</dt>
+        <dd> 컨테이너에 display: flex;를 적용하는게 시작. 가로 방향으로 배치, 자신이 가진 내용물의 width 만큼만 차지, height는 컨테이너의 높이만큼 늘어남.</dd>
+    <dt>배치 방향 설정 - flex-direction</dt>
+        <dd>메인축의 방향을 가로로 할거냐 세로로 할거냐를 정해주는 것
+            <br>row (기본값) : 아이템들이 행(가로) 방향으로 배치됩니다.
+            <br>row-reverse : 아이템들이 역순으로 가로 배치됩니다.
+            <br>column : 아이템들이 열(세로) 방향으로 배치됩니다.
+            <br>column-reverse : 아이템들이 역순으로 세로 배치 됩니다.
+            </dd>
+    <dt>줄넘김 처리 설정 - flex-wrap</dt>
+        <dd>컨테이너가 더 이상 아이템들을 한 줄에 담을 여유 공간이 없을 때 아이템 줄바꿈을 어떻게 할지 결정하는 속성
+            <br>nowrap (기본값) : 줄바꿈을 하지 않습니다. 넘치면 그냥 빠져 나감.
+            <br>wrap : 줄바꿈을 합니다. float이나 inline-block으로 배치한 요소들과 비슷하게 동작해요.
+            <br>wrap-reverse : 줄바꿈을 하는데, 아이템을 역순으로 배치
+            <br>flex-flow : flex-direction과 flex-wrap을 한꺼번에 지정할 수 있는 단축 속성, flex-direction, flex-wrap의 순으로 한 칸 떼고 쓰면 됨.
+        </dd>
+</dl>
+
 </body>
 </html>
