--- a/day4/js3_toggle.html
+++ b/day4/js3_toggle.html
@@ -5,8 +5,10 @@
     <title>자바스크립트 예제#3</title>
 </head>
 <body>
-    <p>HTML 태그의 속성값 변경하기 : img 태그의 이미지 파일명을 지정하는 src 속성값을 변경하는 예제</p>
-    <p> 전구를 클릭해 보세요. 현재 상태 : <em id="bulbstate"> OFF </em></p>
+    <!-- <p>HTML 태그의 속성값 변경하기 : img 태그의 이미지 파일명을 지정하는 src 속성값을 변경하는 예제</p>
+    <p>HTML 태그의 style 값 변경하기 : em 태그의 <strong>스타일 color 값을 변경</strong></p>
+    <p> 전구를 클릭해 보세요. 현재 상태 : <em id="bulbstate" style=color:green;> OFF </em></p>
+
     <h2>Bulb</h2>
     <button onclick="bulbOn()">Turn on the light</button>
     <img id="bulb" src="../images/pic_bulboff.gif" alt="light" style="width:100px; cursor: pointer;"
@@ -15,26 +17,62 @@
     <script>
         const img = document.getElementById('bulb');
         const state = document.getElementById('bulbstate');
-        let bulbstate;
+        let bulbstate = 'ON';
+        function bulbToggle() {
+            if(bulbstate=='ON'){
+                bulbOff();
+            }
+            else{
+                bulbOn(); 
+            }
+        }
         function bulbOn(){
             img.src="../images/pic_bulbon.gif";
             state.innerHTML='ON';
-            bulbstate='on';
+            state.style.color='Red';
+            bulbstate='ON';
         }
         function bulbOff(){
             img.src="../images/pic_bulboff.gif";
             state.innerHTML='OFF';
-            bulbstate = 'off';
+            state.style.color='Black'
+            bulbstate='OFF';
         }   
+    </script> -->
+    <h2>자바스크립트로 이런 것도 해봅시다.</h2>
+    <p>HTML 태그의 속성값 변경하기 : img 태그의 이미지 파일명을 지정하는 <strong>src 속성값을 변경</strong>하는 예제 입니다. </p>
+    <p>HTML 태그의 style값 변경하기 : em 태그의 텍스트 <strong>스타일 color값을 변경</strong>하는 예제 입니다. </p>
+    <p> 전구를 클릭해 보세요.  현재 상태 :  <em id="state" style="color: green;">ON</em></p>  
+    
+    <button onclick="bulbOn()">불을 켜주세요.</button>
+    <img src="../images/pic_bulbon.gif" alt="light" style="width: 100px;cursor: pointer;" id="myImage"
+                                                              onclick="bulbToggle()">
+    <button onclick="bulbOff()">불을 꺼주세요.</button>
+
+    <script>
+        let state=1;    //전역변수 입니다.   1이면 on , 0이면 off
+        const img = document.getElementById('myImage');          //태그 요소를 가져와 변수로 참조.const 는 값의 변경을 안할때 사용합니다.
+        const onoff = document.getElementById('state');
         function bulbToggle() {
-            if(bulbstate=='on'){
-                bulbOff();
-            }
-            else{
-                bulbOn();
-            }
+                if(state==1) {
+                        bulbOff();
+                        state=0;
+                }else  {        //현재 0입니다.
+                        bulbOn();
+                        state=1;
+                }
+        }
+        function bulbOn() {
+            img.src= '../images/pic_bulbon.gif';
+            onoff.style.color='green';
+            onoff.innerHTML='ON';
+        }
+
+        function bulbOff() {
+               img.src= '../images/pic_bulboff.gif'; 
+               onoff.style.color='red';
+               onoff.innerHTML='OFF';
         }
     </script>
-
 </body>
 </html>
